src/test/deca/syntax/invalid/test_parser_error_float-3.deca
// Description:
//    tests le parser pour des flottants
//
// Resultats:
//    Ligne 11 : Erreur de syntaxe
//    test_lex ne doit pas donner d'erreur
//
// Historique:
//    crée le 17/01/2022

4t32.6lER0-3B
